--- a/PlusLevelLoader/PlusLevelLoader.csproj
+++ b/PlusLevelLoader/PlusLevelLoader.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PlusLevelEditor\PlusLevelFormat.csproj" />
+    <ProjectReference Include="..\PlusLevelFormat\PlusLevelFormat.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
