downgrade to 2.0 and add posters

--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PlusLevelEditor\PlusLevelFormat.csproj" />
+    <ProjectReference Include="..\PlusLevelFormat\PlusLevelFormat.csproj" />
   </ItemGroup>
 
 </Project>
